updated the css style

--- a/mongodb-landing-page.html
+++ b/mongodb-landing-page.html
@@ -59,6 +59,32 @@
                 <button class="try-free-button">Try Free</button>
             </div>
         </nav>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, asperiores et quas vero animi doloribus aspernatur aliquid unde repellendus eius cumque qui illum ipsam aperiam corrupti vel ullam nobis quaerat!
+        Eum animi veritatis qui quisquam nihil, minus alias iste natus et ab exercitationem porro quod! Dicta tenetur consequuntur incidunt fuga id consectetur voluptatibus, recusandae hic velit, vero, numquam corporis culpa.
+        Esse ab deleniti sint rem quod! Officia itaque veniam debitis ab suscipit, ad vel vero molestias minus dolorum aliquid sed eveniet odio quas repellendus voluptas, error accusamus repudiandae. Laudantium, enim?
+        Omnis, minus optio. Facere, dolores modi. Libero minus possimus voluptates, facilis, voluptatibus quis necessitatibus expedita veniam molestias delectus deserunt, cupiditate debitis. Odio, id consequatur. Accusantium inventore earum ex alias repellat!
+        Sed asperiores quia a pariatur minima laboriosam, unde, sunt fugiat eligendi quasi, aut perferendis eum. Vitae totam, maxime doloremque aliquam, architecto consectetur nihil ratione iusto, ea eaque laboriosam neque fuga.
+        Sapiente libero, laborum veniam itaque suscipit voluptates odio est rerum quaerat, quas officia rem laudantium perferendis temporibus voluptas quod dolor dicta autem dolore? Facere consectetur qui temporibus, perspiciatis similique necessitatibus?
+        Minima commodi laboriosam pariatur totam corporis porro maxime quae deserunt nam culpa. Enim, quibusdam voluptates. Sit, dolores iste, nesciunt temporibus magni accusamus, officiis similique distinctio recusandae voluptas ea porro molestias.
+        Laboriosam voluptatum sunt amet facilis voluptatem! Atque, quidem. Voluptas rerum, fugit esse illo itaque et? Blanditiis, culpa voluptates neque nisi assumenda illo fuga natus inventore at omnis id consequatur rerum.
+        Delectus voluptas iusto odit, voluptatibus mollitia saepe a ducimus asperiores eveniet nobis maxime, sint alias expedita est facilis voluptate beatae eum magnam blanditiis nostrum sequi ea? Mollitia fugit dolore dolor?
+        Aspernatur corporis veniam voluptatem beatae odit fugit libero ex error praesentium alias, dicta facilis cum atque, eum aut tempore optio dolor nihil temporibus, rerum vitae. Eum maxime commodi reprehenderit eius!</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia iusto nam, consequuntur blanditiis fugit vitae provident, id neque non aperiam minima exercitationem autem voluptate quasi et harum tempora, repellat laboriosam!
+        Unde, explicabo? Dolore quibusdam doloribus, architecto dolores placeat exercitationem debitis earum excepturi suscipit optio facilis facere! Sint odit quidem cumque rem odio, non, natus amet nesciunt, ratione laboriosam tempore praesentium?
+        Repudiandae voluptatibus minima asperiores iusto molestias, ad delectus eos velit facere ipsam error corporis eligendi tempora eum explicabo consequatur sed officiis earum cumque? Quas blanditiis totam rerum repudiandae, doloremque est?
+        Debitis eius a et atque nesciunt impedit, repudiandae ducimus aut voluptatibus tenetur dignissimos dolores illum aliquam modi veritatis? Est fuga consequuntur nemo asperiores culpa illo, fugit eos incidunt dicta molestiae.
+        Nulla ab veniam maxime nobis optio maiores eaque enim iste, accusantium deserunt ipsa excepturi, temporibus a quidem sequi aliquid, esse neque numquam ratione reiciendis amet vel. Beatae ducimus rem at.
+        Necessitatibus vitae culpa, eveniet minus voluptas harum. Non sit, vel quia nobis placeat animi assumenda perferendis labore repudiandae est repellendus a ex ad, dolorum laudantium, qui dolorem! Esse, dolore ipsam?
+        Est laborum veritatis dignissimos quisquam debitis similique ad iste facilis mollitia obcaecati voluptatum omnis sequi quae sapiente, ea, distinctio possimus magni praesentium quia sint qui. Ipsa assumenda minus repellat delectus.
+        Placeat exercitationem quae, in, dolorum expedita nesciunt dicta nihil facere vero porro numquam molestiae earum reprehenderit! Impedit ex amet sed error delectus rem dolore cumque laborum animi? Veniam, consequuntur fuga.
+        Laudantium iste velit voluptatum accusamus eveniet ad tempora, soluta obcaecati et, magnam nulla in sapiente assumenda officia doloremque sit quia consequatur repudiandae earum animi. Inventore asperiores blanditiis beatae commodi ad.
+        Quia necessitatibus et animi quas quod quos ratione eum quis vero, facere soluta quidem qui, dolorem hic, ab repudiandae. Culpa nisi velit reiciendis ad quibusdam. Laboriosam sapiente necessitatibus debitis sunt.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae necessitatibus atque cumque incidunt, eveniet perferendis, quibusdam eos commodi architecto corporis expedita vitae temporibus, ut ad provident. Eius doloribus iste praesentium.
+        Delectus, architecto non. Nemo dignissimos distinctio eveniet optio reiciendis, quia eum, cumque in repellendus numquam, laborum ex. Laborum doloremque, ex eum quibusdam reprehenderit labore, neque nemo quasi maiores molestiae repellendus?
+        Odit quis provident enim laboriosam nulla in voluptatibus dolorem, eaque quam soluta sapiente aut, qui velit sint doloribus eveniet. Eveniet consequuntur sequi, et ut dolores dolorem! Nobis voluptatibus ex deleniti!
+        Temporibus debitis reiciendis perferendis corrupti doloribus animi reprehenderit rem dolorem dolore, explicabo consequatur. Quibusdam, repellendus. Distinctio adipisci assumenda aspernatur consectetur cum at, aperiam, corporis quam nobis similique harum in fugit?
+        Veniam velit sed, quod odit delectus corporis exercitationem saepe possimus quasi placeat animi sapiente harum reiciendis nisi ex sequi cupiditate pariatur repudiandae eveniet cumque est rem deleniti! Ullam, impedit nostrum.</p>
     
     </div>
 </body>
