updated the media screen view

--- a/mongodb-landing-page.html
+++ b/mongodb-landing-page.html
@@ -60,7 +60,7 @@
             </div>
         </nav>
         <div class="media-left-items">
-            <div><button class="searchIcon"><img src="searchIcon.svg" alt="Search icon"></button></div>
+            <div><button class="searchIcon2"><img src="searchIcon.svg" alt="Search icon"></button></div>
             <div>
                 <div class="hamburgerIcon"></div>
                 <div class="hamburgerIcon"></div>
